# JDYNUZZ

./: README.md  unsafeAPI.txt
Fuzzing Client/: local.properties  settings.gradle
Fuzzing Client/app/: build.gradle
Fuzzing Client/app/src/main/jni/: CMakeLists.txt  native-lib.cpp
Fuzzing Client/gradle/wrapper/: gradle-wrapper.properties
Fuzzing Client/shell/: Install_system_priv-app_in_real_device.sh  init_Install_system_priv-app_in_real_device.sh
Fuzzing Server/: README.md  clipboard.txt
Fuzzing Server/java_class/: java_class.json
Fuzzing Server/jni12.0/: dependency_api_call_sequence.json  dependency_api_call_sequence_graphs.json  dependency_api_call_sequence_paths.json  jni.json  test.profraw
Fuzzing Server/py/: analyze_log2.py  analyze_symbol_log.py  analyze_tombstones.py  analyze_tombstones_bak.py  check_log.py  check_tombstones.py  collect_jar.py  cpp_class_jni_fuzzy.py  empty_log.py  java_exception_analyze_log.py  transform_log.py  upper_jni.py  valid_fuzzEngine_log.py
Fuzzing Server/src/: ClientThread.java  Engine.java  MethodRecorder.java  Node.java  ObjectRecorder.java  Server.java  findCppLink.java  findJavaLink.java  findJavaLink_test_maps_transform.java  graph.java
Fuzzing Server/src/cppLink/: CppLink.java
Fuzzing Server/src/util/: JniClass.java  (+5 more)
JNI Analyzer/: MD5.py  api23_clang_parse.py  callgraph_7.0_host.py  callgraph_7.1_host.py  callgraph_8.0_local.py  callgraph_8.1_host.py  callgraph_9.0_host.py  callgraph_v1.2.3.py  callgraph_v1.2.3_10.0.py  callgraph_v1.2.3_10.0_new.py  callgraph_v1.2.3_11.0.py  callgraph_v1.2.3_7.0.py  callgraph_v1.2.3_7.0_new.py  collect_jar.py  collect_jar_java_list_search.py  cpp_class_getService.py  cpp_class_jni.py  cpp_class_jni_fuzzy.py  dependency.py  dependency_analyzsis.py  dependency_post_process.py  extract_jni.py  find_jni_java_class.py  generate_compdb.py  helper.py  helper_local.py  java_class.py  main.py  malware_reflect.py  matlab.py  ninja_parse.py  process_debug_log.py  search_java.py  test.py  util.py  verbose_paraser.py
JNI Analyzer/dependency/: dependency_api_call_sequence.json  dependency_api_call_sequence_graphs.json  dependency_api_call_sequence_paths.json
JNI Analyzer/jni12.0/: jni.json  jni_class_list.json  jni_with_isStatic.json  list.txt
JNI Analyzer/py/: malware_reflect.py  system_app_ana.py
(+246 files in other folders)
